all assignments completed

--- a/assn-2C/client/src/app/components/dashboard/dashboard.component.css
+++ b/assn-2C/client/src/app/components/dashboard/dashboard.component.css
@@ -3,4 +3,6 @@
   border: 2px solid blue;
   padding: 20px;
   max-width: 60pc;
+  font-family: "Oxygen", Arial, Helvetica, sans-serif;
+    font-size: 20px;
 }
